# rue

./: .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_LICENSES  confrue_kek.py  pyproject.toml
docs/: docs.json  index.mdx
docs/apis/: metrics.mdx  open-telemetry-traces.mdx  predicates.mdx  testing.mdx  tracing.mdx
docs/concepts/: built-in-predicate-logic.mdx  case.mdx  confrue-files.mdx  metric.mdx  open-telemetry-traces.mdx  resource.mdx  semantic-predicates.mdx  sut.mdx  test.mdx  trace.mdx
docs/examples/: index.mdx
docs/get-started/: installation.mdx  quick-start.mdx
docs/usage/: built-in-predicates.mdx  decorated-predicates.mdx  running-tests.mdx  writing-tests.mdx
examples/: confrue_assets.py  rue_di_example.py  rue_example_captured_output.py  rue_example_case_groups.py  rue_example_cases.py  rue_example_concurrency.py  rue_example_metrics.py  rue_example_otel_spans.py  rue_example_otel_trace.py  rue_example_outcomes.py  rue_example_parametrize_and_tags.py  rue_example_predicates.py  rue_example_run_inline.py  rue_example_trace_context.py  rue_example_tracing.py  test_di_example.py  test_example_captured_output.py  test_example_case_groups.py  test_example_cases.py  test_example_concurrency.py  test_example_metrics.py  test_example_mixed_backends.py  test_example_otel_spans.py  test_example_otel_trace.py  test_example_outcomes.py  test_example_parametrize_and_tags.py  test_example_predicates.py  test_example_resources_and_fixtures.py  test_example_run_inline.py  test_example_subprocess.py
examples/experiments/: confrue_exp_demo.py  conftest.py  test_chatbot.py
scripts/: fix_fdmp_collision.py
src/: bsdiff4.pyi
src/rue/: __init__.py  config.py  models.py  pytest_plugin.py
tests/: conftest.py  helpers.py
tests/exploratory/: test_edge_case_factory.py
tests/integrations/: rue_test_follows_policy.py  rue_test_has_conflicting_facts.py  rue_test_has_facts.py  rue_test_has_topics.py  rue_test_has_unsupported_facts.py  rue_test_matches_facts.py  rue_test_matches_writing_layout.py  rue_test_matches_writing_style.py  test_ai_predicates.py  test_environment_dispatch.py  test_environment_resource.py  test_experiments.py  test_experiments_api.py  test_monkeypatching_integration.py  test_queue_execution_order.py  test_remote_execution_conflicts.py  test_run_events.py  test_runtime_contracts.py  test_suite_events.py
tests/unit/: conftest.py  factories.py  test_assert_rewrite.py  test_config.py  test_console_reporter.py  test_context.py  test_context_runtime.py  test_db_cli.py  test_dep_collector.py  test_discovery.py  test_edgecasefactory.py  test_environment.py  test_experiments.py  test_iter_cases.py  test_metrics.py  test_migration_runner.py  test_monkeypatching.py  test_outcomes.py  test_output_capture.py  test_parametrize.py  test_predicate.py  test_predicates.py  test_pytest_plugin.py  (+20 more)
(+312 files in other folders)
